# corp_speech_risk_dataset

./: -  .env  .gitignore  .gitmodules  .importlinter  .pre-commit-config.yaml  CITATION.cff  COMPREHENSIVE_GRID_SEARCH_USAGE.md  COURT_IDENTITY_SUPPRESSION_IMPLEMENTATION.md  DOCUMENTATION_UPDATES_SUMMARY.md  HYPERPARAMETER_GRID_EXTENSION.md  IMPROVED_JSON_HANDLING_README.md  ITERATIVE_FEATURE_DEVELOPMENT_GUIDE.md  LEAK_FREE_EVALUATION_GUIDE.md  MODEL_HYPERPARAMETERS_COMPREHENSIVE.md  Makefile  OPTIMIZATION_README.md  OPTIMIZATION_SUMMARY.md  POLR_PIPELINE_SUMMARY.md  README.md  UNIFIED_FEATURE_PIPELINE_SUMMARY.md  WEIGHT_COMPUTATION_IMPROVEMENTS_SUMMARY.md  add_courtlistener_provenance.py  analyze_case_control_patterns.py  analyze_loco_performance.py  check_stored_content.py  debug_test.py  demo_improved_cli.py  demo_progress_bar.py  generate_dca_figure_5_3.py  monitor_and_audit.sh  pyproject.toml  pytest.ini  requirements_optimization.txt  run_bayesian_optimization.py  run_comprehensive_bayesian.sh  run_extraction.py  run_optimization.sh  run_optimization.sh.backup  section_3_1_1_fixed.tex  (+18 more)
data/: sp500_aliases.csv  sp500_aliases_enriched.csv  sp500_officers_cleaned.csv  sp500_official_names_cleaned.csv
docs/: CORAL_USAGE.md  ENHANCED_FUSION_USAGE.md  IMPORT_LINTER.md  LEGAL_BERT_USAGE.md  UNIFIED_VALIDATION_PIPELINE.md  VALIDATION_SYSTEMS_EXPLAINED.md  adjusted_notes_friendly_feature_table.txt  feature_summary_grouped.txt  notes_friendly_all_features.txt
scripts/: POLR_COMPREHENSIVE_USAGE.md  POLR_FINAL_COMMANDS.md  POLR_TRAINING_GUIDE.md  UNIFIED_FEATURE_PIPELINE_README.md  analyze_enhanced_data.py  analyze_label_coverage.py  analyze_repeat_speaker_removal.py  analyze_speaker_case_relationships.py  auto_blacklist_failed_features.py  auto_update_column_governance.py  (+84 more)
src/: cli.py  (+2 more)
src/corp_speech_risk_dataset/corpus_aggregator/: .gitignore  __init__.py  pyproject.toml
src/corp_speech_risk_dataset/corpus_aggregator/aggregation/: run_case_prediction_suite.sh  run_case_prediction_with_existing_infra.py  run_minimal_case_prediction_from_mirror.py
src/corp_speech_risk_dataset/corpus_aggregator/cli/: aggregate.py
src/corp_speech_risk_dataset/corpus_aggregator/misc/: test_case_outcome_imputer.py
src/corp_speech_risk_dataset/corpus_aggregator/modeling/: cli.py  models.py  utils.py
src/corp_speech_risk_dataset/corpus_aggregator/position_features/: batch_cli.py  thresholds.py
src/corp_speech_risk_dataset/corpus_aggregator/tests/: __init__.py  test_aggregation.py  test_cli.py
src/corp_speech_risk_dataset/corpus_cleaner/: .gitignore  __init__.py  pyproject.toml
src/corp_speech_risk_dataset/corpus_cleaner/cli/: normalize.py
src/corp_speech_risk_dataset/corpus_cleaner/tests/: __init__.py  test_cleaner.py
src/corp_speech_risk_dataset/corpus_features/: .gitignore  __init__.py  binary_pipeline.py  coral_data.py  pplm_classifier.py  pyproject.toml  registry.py  tertile_pipeline.py  validation_pipeline.py
src/corp_speech_risk_dataset/corpus_features/cli/: encode.py
src/corp_speech_risk_dataset/corpus_features/encoders/: stembedder.py  wl_features.py
src/corp_speech_risk_dataset/corpus_features/misc/: cli_cluster.py  cli_encode.py  hdbscan_clusterer.py  models.py  polar_pipeline.py  weighted_ordinal.py
src/corp_speech_risk_dataset/corpus_features/tests/: __init__.py  test_cli.py  test_registry.py
src/corp_speech_risk_dataset/corpus_orchestrator/: .gitignore  Makefile  __init__.py  orchestrator.py  pyproject.toml  run_pipeline_async.py  run_single_source_single_law.py
src/corp_speech_risk_dataset/corpus_orchestrator/cli/: orchestrate.py
src/corp_speech_risk_dataset/corpus_orchestrator/misc/: cases_without_years_template.py  cluster_outcomes_simple.py  constants.py  copy_binary_features_to_tertile_improved.py  create_notebook.py  debug_3_1_2.py  debug_oof_and_fix_pdf.py  discovery.py  dominant_case_speaker_filter.py  extract_and_prune_features_pipeline.py  final_paper_assets.py  find_cases_without_years.py  fix_all_fold_boundary_labels.py  fix_oof_test_labels.py  fix_quote_level_imbalance.py  generate_dataset_paper_figures_binary.py  generate_dataset_paper_figures_binary_2fold.py  generate_feature_performance_report.py  generate_missing_figures.py  import_positional_features.py  integrate_graphsage_features.py  iterative_feature_development.py  main.py  make_paper_tables.py  outcome_distribution_plots.py  outcome_summary_statistics.py  polar_fold_independence_proof.py  polr_commands.py  prepare_coral_data.py  quick_validate.py  quick_weight_verification.py  rebuild_case_folders.py  remove_metadata_leakage.py  run_all_features_validation.py  run_all_tertile_experiments.sh  run_analysis_2fold.py  run_binary_fusion_single_fold.sh  run_binary_kfold_split.sh  run_binary_polr_comprehensive.py  run_clustering_with_outcomes.py  (+28 more)
src/corp_speech_risk_dataset/corpus_orchestrator/tests/: test_e2e_smoke.py  test_legacy_workflow.py
src/corp_speech_risk_dataset/corpus_temporal_cv/: .gitignore  __init__.py  metrics.py  pyproject.toml
src/corp_speech_risk_dataset/corpus_temporal_cv/cli/: cv.py
src/corp_speech_risk_dataset/corpus_temporal_cv/misc/: binary_fusion_model.py  cli_coral.py  viz.py
src/corp_speech_risk_dataset/corpus_temporal_cv/tests/: test_coral_metrics.py
src/corp_speech_risk_dataset/corpus_temporal_cv/trainers/: coral_train.py  frozen_mlp_trainer.py  optimized_features_trainer.py  train_coral_model.py
src/corp_speech_risk_dataset/corpus_types/: .gitignore  pyproject.toml
src/corp_speech_risk_dataset/corpus_types/cli/: validate.py
src/corp_speech_risk_dataset/corpus_types/corpus-types/: pyproject.toml
src/corp_speech_risk_dataset/corpus_types/corpus-types/tests/: test_schemas.py
src/corp_speech_risk_dataset/corpus_types/ids/: __init__.py  generate.py
src/corp_speech_risk_dataset/corpus_types/misc/schemas/: models.py  test_provenance.py
src/corp_speech_risk_dataset/corpus_types/schemas/: __init__.py
src/corp_speech_risk_dataset/corpus_types/tests/: conftest.py
src/corp_speech_risk_dataset/corpus_types/utils/: __init__.py  export_schema.py
(+459 files in other folders)
