[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "corp-speech-risk-dataset"
version = "0.1.0"
description = "Pipeline to collect and structure corporate speech legal risk examples."
authors = [
  { name = "Jake Dugan", email = "jake.dugan@ed.ac.uk" }
]
# Restrict to Python 3.11 and 3.12 so TensorFlow wheels install cleanly
requires-python = ">=3.11,<3.12"

dependencies = [
  "httpx",
  "playwright",
  "beautifulsoup4",
  "bs4",
  "soupsieve",
  "polars",
  "typer",
  "loguru",
  "tomli",
  "tomli-w",
  "joblib",
  "tqdm",
  "rich",
  "mypy",
  "types-requests",
  "types-beautifulsoup4",
  "types-toml",
  "pre-commit",
  "ipykernel",
  "pydantic<2.0",
  "nltk",
  "spacy>=3.5",
  "numpy<2.0.0",
  "sentence-transformers",
  "textacy",
  "coreferee==1.4.1",
  "tensorflow>=2.18.1,<2.19.0",
  "tf-keras",
  "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0.tar.gz",
  "notebook",
  "nbformat",
  "seaborn",
  "scikit-learn",
  "pygments",
  "nbconvert",
  "jupyterlab",
  "ipython",
  "pandas",
  "requests",
  "lxml",
  "pyarrow",
  "urllib3==2.5.0",
  "thinc>=8.1.0,<9.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "isort>=5.0.0",
  "mypy>=1.0.0",
  "pytest-cov>=4.0.0",
  "pytest>=8.4.1",
  "pytest-asyncio",
]
# Optional: For transformer fallback in Attributor
# transformers = [
#  "onnxruntime",
#  "transformers"
# ]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_paths = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-asyncio",
]