[build-system]
requires = [
  "setuptools>=61.0",   # PEP 517 backend
  "wheel",              # to build wheels
  "pip",                # GraKeL’s installer helper needs this
  "numpy>=1.8.2",       # GraKeL build dependency
  "scipy>=0.13.3",      # GraKeL build dependency
  "Cython>=0.27.3"      # GraKeL build dependency
]
build-backend = "setuptools.build_meta"
# Had to switch to setuptools to build GraKeL to support building C/C++ extensions which uv_build only supports pure python extensions

[project]
name = "corp-speech-risk-dataset"
version = "0.1.0"
description = "Pipeline to collect and structure corporate speech legal risk examples."
authors = [
  { name = "Jake Dugan", email = "jake.dugan@ed.ac.uk" }
]
requires-python = ">=3.11,<3.12"

dependencies = [
  "click>=8.0",
  "msgspec>=0.18.0,<0.20.0",
  "loguru>=0.7.2",
  "spacy==3.7.4",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz",
  "sentencepiece==0.2.0",
  "catalogue>=2.0.8",
  "blis==0.7.9",
  "confection>=0.0.3",
  "cymem>=2.0.7",
  "murmurhash>=1.0.9",
  "packaging>=23.1",
  "preshed>=3.0.8",
  "srsly>=2.4.5",
  "wasabi>=1.1.1",
  "smart-open==5.2.1",
  "weasel==0.3.3",
  "httpx[http2]>=0.28.0,<1.0.0",
  "playwright",
  "beautifulsoup4",
  "bs4",
  "soupsieve",
  "polars",
  "duckdb",
  "holoviews",
  "hvplot",
  "datashader",
  "typer",
  "tomli",
  "tomli-w",
  "joblib",
  "tqdm",
  "rich",
  "mypy",
  "types-requests",
  "types-beautifulsoup4",
  "types-toml",
  "pre-commit",
  "ipykernel",
  "pydantic<2.0",
  "nltk",
  "numpy<2.0.0",
  "sentence-transformers",
  "textacy",
  "tensorflow>=2.18.1,<2.19.0",
  "tf-keras",
  "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0.tar.gz",
  "notebook",
  "nbformat",
  "seaborn",
  "scikit-learn==1.7.0",
  "pygments",
  "nbconvert",
  "jupyterlab",
  "ipython",
  "pandas",
  "requests",
  "lxml",
  "pyarrow",
  "urllib3==2.5.0",
  "thinc>=8.1.0,<9.0.0",
  "python-dotenv>=1.0.0",
  "grakel>=0.1.10",     
  "graphkernels==0.2.1",
  "scipy==1.13.0",
  "orjson>=3.10",
  "networkx",
  "jinja2>=3.1.2",
  "langcodes>=3.3.0",
  "cachetools>=5.4.0",
  "cytoolz>=0.12.1",
  "floret>=0.3.1",
  "jellyfish>=0.9.0",
  "pyphen>=0.12.0",
  "threadpoolctl>=3.1.0",
  "future>=0.18.3",
  "six>=1.16.0",
  "coreferee==1.4.1",
]



[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "isort>=5.0.0",
  "mypy>=1.0.0",
  "pytest-cov>=4.0.0",
  "pytest>=8.4.1",
  "pytest-asyncio",
]
# Optional: For transformer fallback in Attributor
# transformers = [
#  "onnxruntime",
#  "transformers"
# ]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

# fix?
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_paths = ["src"]

# [dependency-groups]
# dev = [
#  "pytest>=8.4.1",
#  "pytest-cov>=6.2.1",
#  "pytest-asyncio",
# ]

[tool.setuptools.packages.find]
where = ["src"]
