[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corpus-orchestrator"
version = "1.0.0"
description = "Pipeline orchestration module for corpus dataset"
authors = [
    {name = "Corpus Team", email = "corpus@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.4.0",
    "loguru>=0.5.0",
    "pyyaml>=5.4.0",
    "subprocess.run",
    # Module dependencies would be added here
    # "corpus-api>=1.0.0",
    # "corpus-cleaner>=1.0.0",
    # "corpus-extractors>=1.0.0",
    # "corpus-features>=1.0.0",
    # "corpus-temporal-cv>=1.0.0",
    # "corpus-aggregator>=1.0.0",
    # "corpus-types>=1.0.0",
]

[project.scripts]
corpus-orchestrate = "corpus_orchestrator.cli.orchestrate:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["corpus_orchestrator*"]
