[project]
name = "corpus-types"
version = "0.1.0"
description = "Authoritative schemas, IDs, and validators for the corpus pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jake Dugan" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-core>=2.18",
  "orjson>=3.10",
  "typer>=0.12",
  "rich>=13.7",
  "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.10"]

[project.scripts]
corpus-validate = "corpus_types.cli.validate:app"

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
]
